Finished all required parts
* Added multithreaded saving
* Added more detailed console
* Finished reader/writer

--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.myuplay</groupId>
 	<artifactId>ExcelSmasher</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.3-SNAPSHOT</version>
 	<name>Excel Smasher</name>
 	<description>This is a program designed to extract data from groups of files formated for excel and "smash" them into one file.</description>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
@@ -17,6 +20,28 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.1</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>com.myuplay.excelsmasher.ExcelSmasher</mainClass>
+								</transformer>
+							</transformers>
+							
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -25,5 +50,27 @@
 			<artifactId>poi</artifactId>
 			<version>3.9</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.9</version>
+		</dependency>
 	</dependencies>
+	<organization>
+		<name>MyUPlay</name>
+		<url>http://myuplay.com</url>
+	</organization>
+	<scm>
+		<url>scm:git:https://github.com/tyduptyler13/ExcelSmasher</url>
+		<connection>scm:git:https://github.com/tyduptyler13/ExcelSmasher.git</connection>
+	</scm>
+	<url>http://ci.myuplay.com/job/Excel%20Smasher/</url>
+	<issueManagement>
+		<system>Github</system>
+		<url>https://github.com/tyduptyler13/SuperParser/issues</url>
+	</issueManagement>
+	<ciManagement>
+		<system>Jenkins</system>
+		<url>http://ci.myuplay.com/job/Excel%20Smasher/</url>
+	</ciManagement>
 </project>
